# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
# Rust-based Highly Versatile System with Yoda (name of OS, abbrv: RHVSY)
# or, as Rhea said, Raghavussy
name = "raghav_os"
version = "0.1.0"
authors = ["Raghav Awasthi <raghavawasthi2005@gmail.com>"]

[package.metadata.bootimage]
test-args = ["-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio", "-display", "none"]
test-success-exit-code = 33 # (0x10 << 1) | 1
test-timeout = 300 # seconds


[dependencies]
bootloader = "0.9.8"
volatile = "0.2.6"
spin = "0.5.2"
x86_64 = "0.14.2"
uart_16550 = "0.2.0"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]


# unnecessary, as taken care of in x86_64-raghav_os.json
# # profile used for `cargo build`
# [profile.dev]
# # disable stack unwinding on panic
# panic = "abort"

# # profile used for `cargo build --release`
# [profile.release]
# # disable stack unwinding on panic
# panic = "abort"


[[test]]
name = "should_panic"
harness = false
